# apex-tactics

./: AI_IMPLEMENTATION_COMPLETE.md  AI_INTEGRATION.md  AP_VALIDATION_IMPLEMENTATION.md  Advanced-Implementation-Guide.md  Asset-Management-Systems.md  BLENDER_INTEGRATION.md  CAMERA_CONTROLS_IMPLEMENTATION.md  CAMERA_UPGRADE.md  CLAUDE.md  Carousel.md  Dockerfile  ENHANCED_BATTLEFIELD_STATE_SUMMARY.md  ENHANCED_DEMO_COMPLETION_SUMMARY.md  EXAMPLES.md  Exceptions.md  FINAL_DEMO_STATUS.md  FUNCTIONAL_PARITY_STATUS.md  File-System-Structure.md  HOTKEY_MCP_IMPLEMENTATION_SUMMARY.md  INPUT_FIX_SUMMARY.md  INTERACTION_IMPROVEMENTS.md  Interfaces.md  LICENSE  MCP.md  MIGRATION_COMPLETE.md  MODULARIZATION_PLAN.md  MODULAR_DEMO_COMPLETE.md  MOUSE_INTERACTION_COMPLETION_SUMMARY.md  Party-Management-Interface.md  REACTPY_INTEGRATION.md  README-AI-Services.md  README.md  Runtime-Organization.md  TACTICAL_ANALYSIS_REDESIGN_SUMMARY.md  TALENT_MCP_TOOLS_SUMMARY.md  Testing-Plan.md  WEEK_2_COMPLETE.md  WEEK_3_COMPLETE.md  WEEK_4_COMPLETE.md  WEEK_5_BACKLOG.md  (+54 more)
assets/: CLAUDE.md  UI_STYLES_README.md  ui_styles.json
assets/data/: CLAUDE.md  README.md  ui_config.json
assets/images/: CLAUDE.md
docker/: .env.example  docker-compose.test.yml  test-services.py
docker/ai-service/: Dockerfile  requirements.txt  start.sh
docker/game-engine/: Dockerfile  requirements.txt
docker/mcp-gateway/: Dockerfile  requirements.txt
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docker/test-runner/: Dockerfile  requirements.txt
docs/: CHARACTER_DATA_MANAGEMENT.md  Docker-Deployment-Guide.md  MCP-Gateway-Guide.md  Testing-Guide.md
mcp-client/: README.md  cli_fixed.py  pyproject.toml
mcp-client/src/blender_mcp_client/: __init__.py  claude_code_interface.py  claude_integration.py  cli.py  mcp_client.py  ollama_integration.py
mcp-client/src/blender_mcp_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: docker-deploy.sh  launch_mcp_gateway.py  migrate_ui_config.py  run_game_with_mcp.py  run_tests.py  test-services.sh
src/: CLAUDE.md  __init__.py
src/ai/: CLAUDE.md  __init__.py  adaptive_difficulty.py  ai_integration_manager.py  decision_explainer.py  learning_system.py  low_latency_pipeline.py  mcp_tools.py  models.py  ollama_client.py  orchestration_agent.py  performance_optimizer.py  personalities.py  service.py  simple_mcp_tools.py  tactical_ai.py  test_ai_behaviors.py  test_ollama_logging.py  unit_ai_controller.py  websocket_integration.py
src/api/: game_engine.py  models.py  websocket_manager.py
src/client/: __init__.py  client_ui_bridge.py  panel_adapter.py  websocket_game_client.py
tests/: conftest.py  pytest.ini  test_ai_integration.py  test_combat_config_replacement.py  test_config_system.py  test_control_panel_config.py  test_ui_config_replacement.py
(+240 files in other folders)
