[project]
name = "apex-tactics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "structlog>=23.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "fastmcp>=0.3.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "ursina>=6.2.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "prometheus-client>=0.19.0",
    "psutil>=6.1.0",
    "ollama>=0.5.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
